styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

@font-face {
    font-family: "digital-italic";
    src: url(fonts/digital-italic.ttf);
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 500px;
    background-color: blue;
}

#calculator-body {
    max-width: 320px;
    display: flex;
    background-color: rgb(65, 176, 228);
    padding: 10px;
    border: 10px solid rgb(255, 255, 255);
    border-radius: 6px;
}

#ui-container {
    display: flex;
    flex-direction: column;
    gap: 10px;
}


#display {
    background-color: black;
    color: rgb(83, 234, 83);
    border-radius: 15px;
    padding: 20px;
}

#display p {
    font-family: "digital-italic", monospace;
    font-size: 35px;
    height: 25px;
}

#button-panel {
    display: flex;
    gap: 20px;
}

#numbers-panel, #operations-panel {
    display: flex;
    flex-wrap: wrap;
    gap: 2px;
    align-content: flex-start;
}

#numbers-panel button , #operations-panel button{
    width: 50px;
    height: 50px;
    border-radius: 6px;
}

#numbers-panel {
    max-width: 155px;
}

#operations-panel {
    justify-content: space-between;
}

#numbers-panel button {
    background-color: rgb(255, 255, 255);
    font-size: 20px;
    font-weight: 800;
}

#operations-panel button {
    background-color: orangered;
    color: white;
    font-size: 20px;
    font-weight: 700;
}

